# image-processing-functions

./: Cargo.toml  Containerfile  Dioxus.toml  compose.yaml
.devcontainer/: devcontainer.json
src/: helpers.rs  main.rs  pages.rs  rgb.rs
src/pages/: blur.rs  edge_detection.rs  excel_from_image.rs  excel_to_image.rs  get_pixel_color.rs  increase_contrast.rs  remove_color.rs  replace_color.rs  rgb_to_cmyk.rs  rgb_to_grayscale.rs
src/pages/get_pixel_color/: style.css
