[package]
name = "image-processing-project"
version = "0.1.0"
authors = []
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = {version = "0.24.0", optional = true }
image = {version = "0.25.1" ,optional = true }
rust_xlsxwriter = {version = "0.64.2", optional = true }
serde = { version = "1.0.197", features = ["derive"] }
dioxus = { version = "0.5", features = ["fullstack", "router"] }
gloo = {version = "0.11.0", features = ["file", "futures"]}
# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
tempfile = {version = "3.10.1", optional = true }
manganis = "0.2.2"
regex = {version = "1.10.4"}
num = {version = "0.4.3", optional = true }


[features]
default = []
server = ["dioxus/axum", "dep:tempfile", "dep:num", "dep:image", "dep:calamine", "dep:rust_xlsxwriter"]
web = ["dioxus/web"]
